Fixes wrapping of header h2 on mobile.

--- a/_css/main.css
+++ b/_css/main.css
@@ -291,7 +291,7 @@ header h1 {
 
 header h2 {
 	font-size: .8em;
-	width: 263px;
+	width: 265px;
 	margin: 0 auto;
 }
 
